--- a/templates/forms/bank_form.html
+++ b/templates/forms/bank_form.html
@@ -31,6 +31,8 @@ Create Bank
         <form method="POST">
             {{ form.hidden_tag() }}
 
+            <h1>Create Bank</h1>
+
             <div class="form-label">
                 {{ form.name.label(class_='input-label')}} <br>
             </div>
