--- a/templates/forms/company_form.html
+++ b/templates/forms/company_form.html
@@ -21,6 +21,8 @@ header%} Create Company {% endblock %} {% block anchor%}
       <form method="POST">
         {{ form.hidden_tag() }}
 
+        <h1>Create Company</h1>
+
         <div class="form-label">
           {{ form.name.label(class_='input-label') }} <br />
         </div>
