--- a/templates/query/savings_account.html
+++ b/templates/query/savings_account.html
@@ -20,17 +20,7 @@ COOLINK CO-OPERATIVE SAVINGS ACCOUNT
         <div class='p-tag'><h2>Member ID: {{ person.employee_id }}</h2></div>
         <div class='p-tag'><h2>Total balance: {{ person.total_balance | currency }}</h2></div>
     </div> -->
-    <form method="get" class="">
-        <div class="">
-            {{ form.start_date.label }}
-            {{ form.start_date(class="form-control") }}
-        </div>
-        <div class="">
-            {{ form.end_date.label }}
-            {{ form.end_date(class="form-control") }}
-        </div>
-        <button type="submit" class="">Apply Filter</button>
-    </form>
+
     <table class='tab-content'id="info-table" >
         
         <tr>
@@ -54,6 +44,21 @@ COOLINK CO-OPERATIVE SAVINGS ACCOUNT
         </tr>
         
     </table>
+
+    <form method="get" class="filt-wrap">
+        <div class="filt">
+            {{ form.start_date.label(class="filt_item")}}
+            {{ form.start_date(class="filt_item") }}
+        </div>
+        <div class="filt">
+            {{ form.end_date.label(class="filt_item") }}
+            {{ form.end_date(class="filt_item") }}
+        </div>
+        <div class="filt" >
+            <button type="submit" class="">Apply Filter</button>
+        </div>
+    </form>
+
     <table class="tab-content">
                 <tbody>
                     <tr>
