--- a/templates/forms/change_password.html
+++ b/templates/forms/change_password.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h2>Change Password</h2>
+  <h2>Reset Password</h2>
   <div class="full-form-content">
 
     <div class = "flash-messages">
@@ -18,6 +18,9 @@
       
   <form method="POST">
     {{ form.hidden_tag() }}
+
+    <h1>Reset Password</h1>
+
     <div class="form-group">
       {{ form.current_password.label }}
       {{ form.current_password() }}
