--- a/templates/query/loan_account.html
+++ b/templates/query/loan_account.html
@@ -95,8 +95,8 @@ COOLINK CO-OPERATIVE LOAN ACCOUNT
             var buttonPdf = document.getElementById("downloadPdfButton");
     
             // Define the link URL
-            var linkUrlExcel = "{{url_for('download_excel',type='loan',type_id=person.id)}}";
-            var linkUrlPdf = "{{url_for('download_pdf',type='loan',type_id=person.id)}}";
+            var linkUrlExcel = "{{url_for('download_excel',type='loan',type_id=person.id,payments=payments)}}";
+            var linkUrlPdf = "{{url_for('download_pdf',type='loan',type_id=person.id,payments=payments)}}";
     
             // Add a click event listener to the button
             buttonExcel.addEventListener("click", function() {
