--- a/templates/query/person.html
+++ b/templates/query/person.html
@@ -56,8 +56,8 @@ EMPLOYEE DETAILS
         var buttonPdf = document.getElementById("downloadPdfButton");
 
         // Define the link URL
-        var linkUrlExcel = "{{url_for('download_excel',type='persons',type_id='None')}}";
-        var linkUrlPdf = "{{url_for('download_pdf',type='persons',type_id='None')}}";
+        var linkUrlExcel = "{{url_for('download_excel',type='persons',type_id='None',payments=payments)}}";
+        var linkUrlPdf = "{{url_for('download_pdf',type='persons',type_id='None',payments=payments)}}";
 
         // Add a click event listener to the button
         buttonExcel.addEventListener("click", function() {
