--- a/templates/query/expense.html
+++ b/templates/query/expense.html
@@ -45,8 +45,8 @@ COOLINK CO-OPERATIVE EXPENSE ACCOUNT
             var buttonPdf = document.getElementById("downloadPdfButton");
     
             // Define the link URL
-            var linkUrlExcel = "{{url_for('download_excel',type='expense',type_id='None')}}";
-            var linkUrlPdf = "{{url_for('download_pdf',type='expense',type_id='None')}}";
+            var linkUrlExcel = "{{url_for('download_excel',type='expense',type_id='None',payments=payments)}}";
+            var linkUrlPdf = "{{url_for('download_pdf',type='expense',type_id='None',payments=payments)}}";
     
             // Add a click event listener to the button
             buttonExcel.addEventListener("click", function() {
