--- a/templates/query/ledger_report.html
+++ b/templates/query/ledger_report.html
@@ -56,8 +56,8 @@ COOLINK CO-OPERATIVE {{ledger_report.name}} ACCOUNT
             var buttonPdf = document.getElementById("downloadPdfButton");
     
             // Define the link URL
-            var linkUrlExcel = "{{url_for('download_excel',type='{{ledger_report}}',type_id='None',payments=payments)}}";
-            var linkUrlPdf = "{{url_for('download_pdf',type='ledger_report',type_id='None',payments=payments)}}";
+            var linkUrlExcel = "{{url_for('download_excel',type='{{ledger_report}}',type_id='None' )}}";
+            var linkUrlPdf = "{{url_for('download_pdf',type='ledger_report',type_id='None' )}}";
     
             // Add a click event listener to the button
             buttonExcel.addEventListener("click", function() {
