--- a/templates/query/balance_sheet.html
+++ b/templates/query/balance_sheet.html
@@ -143,7 +143,7 @@ Sheet {% endblock %} {% block anchor%}
    
         <td>
           <a
-            href="{{url_for('ledger_report',ledger='liability',ledger_id=liability.id,payments=payments)}}"
+            href="{{url_for('ledger_report',ledger='liability',ledger_id=liability.id)}}"
             >{{ liability.name }}</a
           >
         </td>
