--- a/templates/query/income.html
+++ b/templates/query/income.html
@@ -66,7 +66,7 @@ COOLINK CO-OPERATIVE INCOME ACCOUNT
 
         // Define the link URL
         var linkUrlExcel = "{{url_for('download_excel_income')}}";
-        var linkUrlPdf = "{{url_for('download_pdf',type='income',type_id='None',payments=payments)}}";
+        var linkUrlPdf = "{{url_for('download_pdf_income')}}";
 
         // Add a click event listener to the button
         buttonExcel.addEventListener("click", function() {
