--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -25,7 +25,9 @@
     <div class='all-sections'>
         
         <nav class='section-1'>
-            <div class="logo"><img src="\static\logo.png" alt="logo"></div>
+            <!-- <div class="logo"><img src="\static\logo.png" alt="logo"></div> -->
+
+            <div class="logo"></div>
             <ul class="side-bar" id="side-bar">
                 
                 <li class="{%block dash%}active nav-item{%endblock%}" id="move">
@@ -62,7 +64,7 @@
                 {% if person.role.id == 1 or person.role.id == 3 %}
 
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('edit_profile') }}"><i class="fa-solid fa-lock"></i><span>Edit Member Info</span></a>
+                    <a class="nav-link" href="{{ url_for('edit_profile') }}"><i class="fa-solid fa-circle-info"></i></i><span>Edit Member Info</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('reset_password') }}"><i class="fa-solid fa-lock"></i><span>Reset Password</span></a>
