--- a/templates/login.html
+++ b/templates/login.html
@@ -9,15 +9,16 @@
     <link rel="stylesheet" href="\static\css\style.css">
 </head>
 <body class='login'>
-                <!-- <div class="logo">
-                <img src="\static\logo.png" alt="logo">
-            </div> -->
+    <!-- <div class="logo">
+        <img src="\static\images\logo.png" alt="logo">
+    </div> -->
     <div class="wrapper">
         <form method="POST">
-            <!-- <img src="\static\images\coolink2.png" alt="coollinks-logo"> -->
-
+            <div class="imgl">
+                <img src="\static\images\coolinks.png" alt="coolink-logo">
+                <h1> Login </h1>
+            </div>
             
-            <h1 style='text-align: center'> Login </h1>
             <div class = "flash-messages">
                 {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
@@ -29,6 +30,10 @@
                 {% endif %}
                 {% endwith %}
                 </div>
+
+            <div class="message">
+                <p>Please enter your username and password in the fields below.</p>
+            </div>
 
             <div class="input-box">
                 <!-- <input type="text" placeholder="username" required> -->
@@ -51,14 +56,11 @@
 
             </div>
 
-
-
-
             <!-- <button type="submit" class="btn">
                 Login
             </button> -->
 
-            {{form.submit(class_="btn")}}
+            {{form.submit(class_="btn", value = "Login")}}
 
         </form>
     </div>
