--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,7 +23,7 @@
     justify-content: center;
     align-items: center;
     min-height: 90vh;
-    background-color: #fff;
+    /* background-color: #fff; */
     background-size: cover;
     background-position: center;
     /* background: url('static\images\darkslate.jpg') no-repeat; */
@@ -69,18 +69,20 @@
 .login .input-box input {
     width: 100%;
     height: 100%;
-    background: transparent;
-    border: none;
-    outline: none;
+    /* background: transparent; */
+    /* border: none; */
+    /* outline: none;
     border-radius: 40px;
-    border: 2px solid rgba(255, 255, 255, .2);
+    border: 2px solid rgba(255, 255, 255, .2); */
     font-size: 16px;
     padding: 20px 45px 20px 20px;
-    color: #fff;
+    /* color: #fff; */
 }
+
 
 .login .input-box input::placeholder{
     color: #000;
+    /* background: #333; */
 }
 
 .login .input-box i{
