--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -107,7 +107,7 @@
                         </div>
                         
                         <div>
-                        <p><strong>{{ person.balance_bfd | currency}}</strong></p>
+                        <p><strong>{{ person.total_balance | currency}}</strong></p>
                         </div>
                     </a>
                     </div>
