--- a/templates/query/trial-balance.html
+++ b/templates/query/trial-balance.html
@@ -30,7 +30,7 @@ Trial Balance
             </tr>
             <tr>
                
-                <td><a href="">Bank</a></td>  <!-- Fetching the person's name -->
+                <td><a href="{{ url_for('bank_report')}}">Bank</a></td>  <!-- Fetching the person's name -->
                 <td>bank balance</td>
                 <td>{{ cash_and_bank | currency }}</td>
                 <td> _ </td>
