loan application now available to Users

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -133,7 +133,13 @@
                     
                     </a>
                     </div>
-                    
+                    <div class='content-con'>
+                        <a href="{{url_for('register_loan')}}">
+                            <div>
+                            <p><strong>Apply for Loan</strong></p>
+                            </div>
+                        </a>
+                    </div>
 
                     <div class="icon-con" id='landmark'><i class="fa-solid fa-landmark"></i></div>
 
