fixed upload and loan

--- a/templates/forms/upload.html
+++ b/templates/forms/upload.html
@@ -59,6 +59,14 @@
                 <br></div>
 
                 <div class="form-label">
+                    {{ form.bank.label(class_='input-label') }} <br>
+                </div>
+
+                <div class="form-box">
+                {{ form.bank(class_="input") }}
+                <br></div>
+
+                <div class="form-label">
                 {{ form.description.label(class_='input-label') }} <br>
                 </div>
 
