fixed minor errors

--- a/templates/forms.html
+++ b/templates/forms.html
@@ -39,7 +39,7 @@ active
         
         <div class="card">
             <div class="container">
-                <a href="{{ url_for('register_loan') }}">Loan Applicatiion</a>
+                <a href="{{ url_for('register_loan') }}">Loan Application</a>
             </div>
         </div>
 
