--- a/templates/query/savings_account.html
+++ b/templates/query/savings_account.html
@@ -39,7 +39,7 @@ COOLINK CO-OPERATIVE SAVINGS ACCOUNT
         </tr>
 
         <tr>
-            <td>Loan:</td>
+            <td>Savings:</td>
             <td>{{ person.total_balance | currency }}</td>
         </tr>
         
