--- a/templates/query/trial-balance.html
+++ b/templates/query/trial-balance.html
@@ -116,7 +116,7 @@ Trial Balance
             <!--deficit-->
             <tr>
                 
-                <td><a href="">Deficit </a></td>  <!-- Fetching the person's name -->
+                <td><a href="">Retained earnings</a></td>  <!-- Fetching the person's name -->
                 <td>Retained earnings</td>
                 <td> _ </td>
                 <td>{{ deficit | currency }}</td>
