--- a/templates/forms.html
+++ b/templates/forms.html
@@ -45,7 +45,7 @@ active
 
         <div class="card">
             <div class="container">
-                <a href="{{ url_for('create_loan') }}">Create Loan</a>
+                <a href="{{ url_for('request_loan') }}">Create Loan</a>
             </div>
         </div>
 
@@ -86,7 +86,7 @@ active
         <div class="card">
 
             <div class="container">
-                <a href="{{ url_for('withdraw') }}">Make Withdrawal</a>
+                <a href="{{ url_for('request_withdrawal') }}">Make Withdrawal</a>
             </div>
         </div>
 
