--- a/templates/forms/loan_form.html
+++ b/templates/forms/loan_form.html
@@ -77,11 +77,11 @@ Create Loan
             </div>
 
             <div class="form-label">
-                {{ form.end_date.label (class_='input-label')}}<br>
+                {{ form.duration.label (class_='input-label')}}<br>
             </div>
 
             <div class="form-box">
-                {{ form.end_date (class_="input") }} <br>
+                {{ form.duration (class_="input") }} <br>
                 
             </div>
             <div class="form-label">
