--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,21 @@
             <a href="{{url_for('logout')}}" class="tail"><i class="fa-sharp fa-solid fa-right-from-bracket"></i></a>
         </section>
     </header>
-
-    {%block content%} {%endblock%}
+    
+    {%block flash%}
+    <div class = "flash-messages">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            <ul class="flash-messages">
+                {% for message in messages %}
+                    <li class="fade-out {{message[0]}}">{{message[1]}}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+        {% endwith %}
+        </div>
+    {%endblock%}
+    {%block content%} 
+    {%endblock%}
 </body>
 </html>
