--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -58,6 +58,8 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('role_assignment') }}"><i class="fa-brands fa-atlassian"></i><span>Role Assignment</span></a>  
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('approval') }}"><i class="fa-solid fa-user-plus"></i><span>Approvals</span></a>
                 {% endif %}
                 {% if person.role.id == 1 or person.role.id == 3 %}
 
